syntax = "proto3";

option csharp_namespace = "STAIExtensions.Host.Grpc";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package STAIExtensionsGrpc;

// The greeting service definition.
service STAIExtensionsGrpcService {
  rpc RegisterConnectionState(NoParameters) returns (stream ConnectionStateResponse);
  // Registers for dataset updated   
  rpc OnDataViewUpdated(OnDataSetViewUpdatedRequest) returns (stream OnDataSetViewUpdatedResponse);
  // Registers for dataset updated   
  rpc OnDataSetUpdated(NoParameters) returns (stream OnDataSetUpdatedResponse);
  // Create a new view  
  rpc CreateView(CreateViewRequest) returns (IDataSetView);
  // Get a view
  rpc GetView(GetViewRequest) returns (IDataSetView);
  // Get a view
  rpc GetViewJson(GetViewRequest) returns (IDataSetViewJson);
  // List the data sets
  rpc ListDataSets(NoParameters) returns (ListDataSetsResponse);
  // List the available views
  rpc GetRegisteredViews(NoParameters) returns (GetRegisteredViewsResponse);
  // Remove View
  rpc RemoveView(RemoveViewRequest) returns (BoolResponse);
  // Attaches a View to a dataset
  rpc AttachViewToDataset(AttachViewToDatasetRequest) returns (BoolResponse);
  // Attaches a View to a dataset
  rpc DetachViewFromDataset(DetachViewFromDatasetRequest) returns (BoolResponse);
  // Set view Parameters
  rpc SetViewParameters(SetViewParametersRequest) returns (BoolResponse);
  // Set view Enabled
  rpc SetViewAutoRefreshEnabled(SetViewAutoRefreshEnabledRequest) returns (BoolResponse);
  // Set view Disabled
  rpc SetViewAutoRefreshDisabled(SetViewAutoRefreshDisabledRequest) returns (BoolResponse);
  // Get My Views
  rpc GetMyViews(GetMyViewsRequest) returns (MyViewResponse);
  
}

// Requests 
message CreateViewRequest {
  string viewType = 1;
  string ownerId = 2;
}

message GetViewRequest {
  string viewId = 1;
  string ownerId = 2;
}

message RemoveViewRequest {
  string viewId = 1;
  string ownerId = 2;
}

message AttachViewToDatasetRequest {
  string viewId = 1;
  string dataSetId = 2;
  string ownerId = 3;
}

message DetachViewFromDatasetRequest {
  string viewId = 1;
  string dataSetId = 2;
  string ownerId = 3;
}

message SetViewParametersRequest {
  string viewId = 1;
  string ownerId = 2;
  string jsonPayload = 3;
}

message GetMyViewsRequest {
  string ownerId = 1;
}

message SetViewAutoRefreshEnabledRequest {
  string viewId = 1;
  string ownerId = 2;
}

message SetViewAutoRefreshDisabledRequest {
  string viewId = 1;
  string ownerId = 2;
}

// Models
message IDataSetView {
  string Id = 1;
  string OwnerId = 2;
  google.protobuf.Timestamp ExpiryDate = 3;
  google.protobuf.Timestamp LastUpdate = 4;
  bool RefreshEnabled = 5;
  repeated DataSetViewParameterDescriptor ViewParameterDescriptors = 6;
  google.protobuf.Duration SlidingExpiration = 7;
  string ViewTypeName = 8;
  string FriendlyViewTypeName = 9;
}

message IDataSetViewJson {
  string Payload = 1;
}

message MyViewResponse {
  message MyView {
    string ViewId = 1;
    string ViewTypeName = 2;
    string FriendlyViewTypeName = 3;
  }
  repeated MyView Items = 1;
}

message DataSetViewParameterDescriptor {
  bool Required = 1;
  string Name = 2;
  string Type = 3;
  string Description = 4;
}

message OnDataSetViewUpdatedRequest {
  string OwnerId = 1;
}

message ListDataSetsResponse {
  repeated DataSetInformation Items = 1;
}

message GetRegisteredViewsResponse {
    repeated DataSetViewInformation Items = 1;
}

message DataSetInformation {
  string DataSetName = 1;
  string DataSetId = 2;
  string DataSetType = 3;
  string FriendlyDataSetType = 4;
}

message DataSetViewInformation {
  string ViewName = 1;
  string ViewTypeName = 2;
  string FriendlyViewTypeName = 3;
  repeated DataSetViewParameterDescriptor DataSetViewParameterDescriptors = 4;
}

// Shared
message NoParameters {}

// Responses
message BoolResponse {
  bool Result = 1;
}

message OnDataSetUpdatedResponse {
  string DataSetId = 1;
}

message OnDataSetViewUpdatedResponse {
  string ViewId = 1;
}

message ConnectionStateResponse {
  google.protobuf.Timestamp ServerTimeUTC = 1;
}